--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "classnames": "^2.3.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "json-server": "^0.17.3",
     "mongoose": "^7.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -27,7 +28,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "json-server --watch db.json --port 5000"
   },
   "eslintConfig": {
     "extends": [
